--- a/index.html
+++ b/index.html
@@ -70,16 +70,20 @@
       <div class="row">
         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
           <div class="hero-text">
-            <h1 class="text-white" data-aos="fade-up">
-              Software Engineer <h3 class="text-white">2021 - Present</h3>
-            </h1>
+            <h3 class="text-white" data-aos="fade-up">
+              Consultant at  <a target="_blank" href="https://www2.deloitte.com/in/en.html"> Deloitte</a>
+              <h5 class="text-white">Jan 2024 - Present</h5>
+            </h3>          
+          </div>
+          <div class="hero-text">
+            <h3 class="text-white" data-aos="fade-up">
+              Software Engineer at <a target="_blank" href="https://www.ltimindtree.com/">LtiMindtree Ltd.</a>
+              <h5 class="text-white">Aug 2021 - Jan 2024</h5>
+            </h3>
             <h3 class="text-white" data-aos="fade-up">
               <a class="text-white" target="_blank"
                 href="https://experienceleague.adobe.com/docs/experience-manager-65.html?lang=en">AEM </a> Full Stack
               Developer
-            </h3>
-            <h3 class="text-white" data-aos="fade-up">
-              <a target="_blank" href="https://www.ltimindtree.com/">LtiMindtree Ltd.</a>
             </h3>
             <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let's
               discuss together!</a>
@@ -591,12 +595,15 @@
           </h2>
           <h5 class="my-3 pt-3 " data-aos="fade-up" data-aos-delay="100">
 
-            As a passionate AEM developer with 2 years of industry experience, my goal is to leverage my abilities and contribute optimal
+            As a passionate AEM developer with 3+ years of industry experience, my goal is to leverage my abilities and contribute optimal
 solutions to organizations through my skillset and innovative ideas. I am dedicated to continuously enhancing my knowledge and
 staying updated with the latest trends in AEM development to deliver high-quality results
 
           </h5>
           <a href="experience.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Look At Work Experience</a>
+          <p data-aos="fade-up" data-aos-delay="400">
+            <small>Deloitte (Consultant)</small>
+          </p>
           <p data-aos="fade-up" data-aos-delay="400">
             <small>LtiMindtree Ltd. (Software Engineer)</small>
           </p>
@@ -614,6 +621,22 @@ staying updated with the latest trends in AEM development to deliver high-qualit
             <h2 class="mb-4" data-aos="fade-up">
               <strong>Achievement </strong>
             </h2>
+            <p class="mt-3 mb-4">
+              Here are some of the achievement during work.. 2024 - 2025
+            </p>
+
+            <ul class="list-detail">
+              <li>
+                </span>
+                Received 3 Dot of fame at Deloitte (Appreciation)
+              </li>
+
+              <li>
+                </span>
+                Top Rating at Deloitte
+              </li>
+            </ul>
+
             <p class="mt-3 mb-4">
               Here are some of the achievement during work.. 2022 - 2023
             </p>
@@ -675,6 +698,33 @@ staying updated with the latest trends in AEM development to deliver high-qualit
               <strong>Job Offers </strong>
             </h2>
             <p class="mt-3 mb-4">
+              Here are some job offers before joining Deloitte...
+            </p>
+
+            <ul class="list-detail">
+              <li>
+                </span>
+                Got offer from Deloitte for Consultant (Aem developer) and Joined in Jan 2024.
+              </li>
+              <li>
+                </span>
+                Got offer from KPMG for AEM developer (Associate Consultant).
+              </li>
+              <li>
+              </span>
+                Got offer from Bajaj finserv for Senior SDE 1 (AEM developer).
+              </li>
+              <li>
+                </span>
+                Cleared all interview rounds of TCS for AEM Developer role.
+              </li>
+              <li>
+                </span>
+                Cleared all interview rounds of Bristol Myers Squibb for AEM Developer.
+              </li>
+            </ul>    
+
+            <p class="mt-3 mb-4">
               Here are some job offers during college...
             </p>
 
@@ -711,7 +761,7 @@ staying updated with the latest trends in AEM development to deliver high-qualit
                 </span>
                 Bitwise Pune recruitment 2021 - got job offer.
               </li>
-
+            </ul>              
   </section>
 
 
@@ -720,7 +770,7 @@ staying updated with the latest trends in AEM development to deliver high-qualit
       <div class="row">
         <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
           <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">
-            I am <strong> enthusiastic to work</strong> as software engineer
+            I am <strong> enthusiastic to work</strong> as an AEM Developer
           </h1>
         </div>
 
