--- a/experience.html
+++ b/experience.html
@@ -77,8 +77,66 @@
 
         <section class="project section-padding" style="width: 100%" id="project">
           <h4 class="mb-5 text-center" data-aos="fade-up">
-            SOFTWARE ENGINEER | LTIMINDTREE LTD <br>
-            <strong>Technology leader in steel wire, coating and construction </strong> Apr 2023 - Present <br>
+            Consultant | Deloitte | Bengaluru | 16th Jan 2024 - Present<br>
+            <strong> Tourism and Events: Experience Booking Platform </strong> Sep 2024 - Present <br>
+          </h4>
+          <h6 class="mb- text-center"><strong>AEM, Java, HTL, Servlets, Services, GraphQL, Content Fragments</strong></h6>
+
+          <ul class="list-detail">
+            <li>
+              </span>
+              Created functionality to transfer content fragment data using GraphQL to the Adobe Target, for personalized user experiences in the mobile app.
+            </li>
+
+            <li>
+              </span>
+               Developed servlets to integrate data from Mulesoft with authored fields, passing updated information in JSON format to the frontend.
+
+            </li>
+
+            <li>
+              </span>
+              Enhanced components to make it generic, creating micro-sites with updated templates and policies, and developed data pages \newline for consistent data utilization across all pages using sling models.
+
+            </li>
+
+          </ul>
+        </section>
+
+        <section class="project section-padding" style="width: 100%; padding-top: 0px;" id="project">
+          <h4 class="mb-5 text-center" data-aos="fade-up">
+            <strong>Worked for Multinational Steel-making Company </strong> 16th Jan 2024 - Aug 2024<br>
+          </h4>
+          <h6 class="mb- text-center"><strong>AEM, Java, JavaScript, SCSS, GraphQL Integration, HTL, Servlets</strong></h6>
+
+          <ul class="list-detail">
+            <li>
+              </span>
+              Actively engaged in frontend development utilizing JavaScript, CSS, HTML, and Sightly, while designing and implementing responsive layouts to ensure a seamless user experience across all devices.
+
+            </li>
+
+            <li>
+              </span>
+              Led the development of comprehensive web application designed specifically for dealers, distributors, and call centers, ensuring seamless post-order management of all operations.
+
+            </li>
+
+            <li>
+              </span>
+              Leveraged GraphQL integration with Magento for efficient data \newline retrieval and storage, by seamlessly integrating with AJAX calls and enhancing API/GraphQL functionality. Streamlined API requests to improve performance and user experience on web applications.
+            </li>
+            <li>
+              </span>
+              I have created reusable and expandable components for multiple tables and forms to minimize rework and enhanced scalability, while facilitating seamless data flow between the Java backend and \newline frontend JavaScript using JSON data attributes.
+            </li>
+          </ul>
+        </section>
+
+        <section class="project section-padding" style="width: 100%" id="project">
+          <h4 class="mb-5 text-center" data-aos="fade-up">
+            SOFTWARE ENGINEER | LTIMINDTREE LTD | Aug 2021 - 12th Jan 2024 <br>
+            <strong>Technology leader in steel wire, coating and construction </strong> Apr 2023 - 12th Jan 2024 <br>
           </h4>
           <h6 class="mb- text-center"><strong>AEM, DAM, CMS, Java, HTL, Servlets, Workflows</strong></h6>
 
@@ -229,7 +287,7 @@
       <div class="row">
         <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
           <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">
-            I am <strong> enthusiastic to work</strong> as software engineer
+            I am <strong> enthusiastic to work</strong> as an AEM Developer
           </h1>
         </div>
 
@@ -254,8 +312,8 @@
 
           <p class="mb-1">
             <i class="fa fa-home mr-2 footer-icon"></i>
-            MGM's College Of Engineering Nanded Bypass Rd, Hingoli Naka,
-            Ambekar Nagar, Nanded-Waghala, Maharashtra 431601, India
+            No 91, Balaj layout, near global tech mylasandrapark, 
+            RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
           </p>
         </div>
 
