--- a/project-vtravel.html
+++ b/project-vtravel.html
@@ -241,7 +241,7 @@
         <div class="row">
           <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
             <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">
-              I am <strong> enthusiastic to work</strong> as software engineer
+              I am <strong> enthusiastic to work</strong> as an AEM Developer
             </h1>
           </div>
 
@@ -274,8 +274,8 @@
 
             <p class="mb-1">
               <i class="fa fa-home mr-2 footer-icon"></i>
-              MGM's College Of Engineering Nanded Bypass Rd, Hingoli Naka,
-              Ambekar Nagar, Nanded-Waghala, Maharashtra 431601, India
+              No 91, Balaj layout, near global tech mylasandrapark, 
+              RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
             </p>
           </div>
 
