--- a/contact.html
+++ b/contact.html
@@ -132,13 +132,9 @@
 -->
     <div class="google-map" data-aos="zoom-in">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15555.23472289498!2d77.49597393225207!3d12.920014795871612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1693154566185!5m2!1sen!2sin"
-        width="1920"
-        height="600"
-        frameborder="0"
-        style="border: 0"
-        allowfullscreen=""
-      ></iframe>
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3398.3482023675547!2d73.72057710490145!3d18.600301928341146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sin!4v1761463621251!5m2!1sen!2sin"
+        width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
 <footer class="site-footer">
@@ -179,8 +175,8 @@
 
             <p class="mb-1">
               <i class="fa fa-home mr-2 footer-icon"></i>
-              No 91, Balaj layout, near global tech mylasandrapark, 
-              RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
+              Hinjawadi Phase II, Hinjawadi Rajiv Gandhi Infotech Park, 
+              Hinjawadi, Pimpri-Chinchwad, Maharashtra 411057
             </p>
           </div>
 
