--- a/experience.html
+++ b/experience.html
@@ -77,8 +77,37 @@
 
         <section class="project section-padding" style="width: 100%" id="project">
           <h4 class="mb-5 text-center" data-aos="fade-up">
-            Consultant | Deloitte | Bengaluru | 16th Jan 2024 - Present<br>
-            <strong> Tourism and Events: Experience Booking Platform </strong> Sep 2024 - Present <br>
+            Senior Associate Consultant (Tech Lead)| Infosys Ltd | Pune | 27th March 2025 - Present<br>
+            <strong> The world’s leading manufacturer of construction and mining equipment </strong> April 2025 - Present <br>
+          </h4>
+          <h6 class="mb- text-center"><strong>AEM DAM, Dispatcher, Digital Media (Scene7) , Schedulers, Workflows, Asset Migration</strong></h6>
+          <ul class="list-detail">
+            <li>
+              </span>
+              Implemented AEM Assets (DAM) features including Dynamic Media (Scene7) integration, Metadata Schema/Profile, and custom asset workflows. 
+            </li>
+
+            <li>
+              </span>
+              Configured and optimized Dispatcher for multiple environment along with Azure DevOps pipelines for automated deployment.
+            </li>
+
+            <li>
+              </span>
+              Executed asset migration and implementation of custom bulk operations (upload, download, delete, metadata import). 
+            </li>
+
+            <li>
+              </span>
+              Customized search indexing (Oak) managed folder taxonomy, and enhanced asset filters withing AEM DAM.
+            </li>
+          </ul>
+        </section>
+
+        <section class="project experience-section-padding" style="width: 100%" id="project">
+          <h4 class="mb-5 text-center" data-aos="fade-up">
+            Consultant | Deloitte | Bengaluru | 16th Jan 2024 - March 2025<br>
+            <strong> Tourism and Events: Experience Booking Platform </strong> Sep 2024 - March 2025 <br>
           </h4>
           <h6 class="mb- text-center"><strong>AEM, Java, HTL, Servlets, Services, GraphQL, Content Fragments</strong></h6>
 
@@ -103,7 +132,7 @@
           </ul>
         </section>
 
-        <section class="project section-padding" style="width: 100%; padding-top: 0px;" id="project">
+        <section class="project experience-section-padding" style="width: 100%; padding-top: 0px;" id="project">
           <h4 class="mb-5 text-center" data-aos="fade-up">
             <strong>Worked for Multinational Steel-making Company </strong> 16th Jan 2024 - Aug 2024<br>
           </h4>
@@ -133,7 +162,7 @@
           </ul>
         </section>
 
-        <section class="project section-padding" style="width: 100%" id="project">
+        <section class="project experience-section-padding" style="width: 100%" id="project">
           <h4 class="mb-5 text-center" data-aos="fade-up">
             SOFTWARE ENGINEER | LTIMINDTREE LTD | Aug 2021 - 12th Jan 2024 <br>
             <strong>Technology leader in steel wire, coating and construction </strong> Apr 2023 - 12th Jan 2024 <br>
@@ -178,7 +207,7 @@
           </ul>
         </section>
 
-        <section class="project section-padding" style="width: 100%; padding-top: 0px;" id="project">
+        <section class="project experience-section-padding" style="width: 100%; padding-top: 0px;" id="project">
           <h4 class="mb-5 text-center" data-aos="fade-up">
             <strong>Worked for The largest automobile manufacturer in the world </strong> Aug 2021 - March 2023<br>
           </h4>
@@ -234,7 +263,7 @@
               </h2>
             </div>
 
-            <section class="project section-padding" style="width: 100%" id="project">
+            <section class="project experience-section-padding" style="width: 100%" id="project">
               <h4 class="mb-5 text-center" data-aos="fade-up">
                 MINDTREE ORCHARD LEARNING | <strong> Mindtree ltd.</strong> <br>
                 <strong>Technology leader in steel wire, coating and construction </strong> 1-Aug-21 to 31st Nov 2021 |
@@ -312,8 +341,10 @@
 
           <p class="mb-1">
             <i class="fa fa-home mr-2 footer-icon"></i>
-            No 91, Balaj layout, near global tech mylasandrapark, 
-            RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
+            <a href="contact.html#google-map">
+              Hinjawadi Phase II, Hinjawadi Rajiv Gandhi Infotech Park, 
+              Hinjawadi, Pimpri-Chinchwad, Maharashtra 411057
+            </a>
           </p>
         </div>
 
