--- a/index.html
+++ b/index.html
@@ -70,16 +70,20 @@
       <div class="row">
         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
           <div class="hero-text">
-            <h3 class="text-white" data-aos="fade-up">
-              Consultant at  <a target="_blank" href="https://www2.deloitte.com/in/en.html"> Deloitte</a>
-              <h5 class="text-white">Jan 2024 - Present</h5>
-            </h3>          
+            <h4 class="text-white" data-aos="fade-up">
+              Senior Associate Consultant at  <a target="_blank" href="https://www.infosys.com/"> Infosys Ltd.</a>
+              <h5 class="text-white">Apr 2025 - Present</h5>
+            </h4>
           </div>
           <div class="hero-text">
-            <h3 class="text-white" data-aos="fade-up">
+            <h5 class="text-white" data-aos="fade-up">
+              Consultant at  <a target="_blank" href="https://www2.deloitte.com/in/en.html"> Deloitte</a>
+              <h6 class="text-white">Jan 2024 - March 2025</h6>
+            </h5>
+            <h5 class="text-white" data-aos="fade-up">
               Software Engineer at <a target="_blank" href="https://www.ltimindtree.com/">LtiMindtree Ltd.</a>
-              <h5 class="text-white">Aug 2021 - Jan 2024</h5>
-            </h3>
+              <h6 class="text-white">Aug 2021 - Jan 2024</h6>
+            </h5>
             <h3 class="text-white" data-aos="fade-up">
               <a class="text-white" target="_blank"
                 href="https://experienceleague.adobe.com/docs/experience-manager-65.html?lang=en">AEM </a> Full Stack
@@ -325,7 +329,7 @@
                     opacity: 1;
                     animation-name: react-reveal-481986680843462-1;
                   ">
-                    TECHNOLOGIES
+                    Technologies
                   </h3>
                   <ul class="list-detail">
                     <li>
@@ -338,29 +342,82 @@
                     </li>
                     <li>
                       </span>
-                      React Js
-                    </li>
-                    <li>
-                      </span>
                       Sling Servlets
                     </li>
-
                     <li>
                       </span>
                       Services
+                    </li>
+                    <li>
+                      </span>
+                      Workflows
+                    </li>
+                    <li>
+                      </span>
+                      Schedulers
                     </li>
                     <li>
                       </span>
                       Rest APIs
                     </li>
-
-                    <li>
-                      </span>
-                      Services
-                    </li>
                     <li>
                       </span>
                       Maven
+                    </li>
+                    <li>
+                      </span>
+                      Azure DevOps
+                    </li>
+                    <li>
+                      </span>
+                      React Js
+                    </li>
+                  </ul>
+
+                </div>
+                <div class="col">
+                  <h3 class="react-reveal" style="
+                    animation-fill-mode: both;
+                    animation-duration: 1000ms;
+                    animation-delay: 0ms;
+                    animation-iteration-count: 1;
+                    opacity: 1;
+                    animation-name: react-reveal-481986680843462-1;
+                  ">
+                    AEM Concepts
+                  </h3>
+                  <ul class="list-detail">
+                    <li>
+                      </span>
+                      AEM As Cloud Service
+                    </li>
+                    <li>
+                      </span>
+                      AEM Sites
+                    </li>
+                    <li>
+                      </span>
+                      AEM Assets (DAM)
+                    </li>
+                    <li>
+                      </span>
+                      AEM Forms
+                    </li>
+                    <li>
+                      </span>
+                      Dynamic Media (Scene7)
+                    </li>
+                    <li>
+                      </span>
+                      Dispatcher Configuration
+                    </li>
+                    <li>
+                      </span>
+                      Assets Migration
+                    </li>
+                    <li>
+                      </span>
+                      Oak Indexing
                     </li>
                   </ul>
 
@@ -585,7 +642,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-5 col-12">
           <div class="contact-image" data-aos="fade-up">
-            <img src="images/Vinay.png" class="img-fluid" alt="website" />
+            <img src="images/Vinay1.jpg" class="img-fluid" alt="website" />
           </div>
         </div>
 
@@ -595,12 +652,15 @@
           </h2>
           <h5 class="my-3 pt-3 " data-aos="fade-up" data-aos-delay="100">
 
-            As a passionate AEM developer with 3+ years of industry experience, my goal is to leverage my abilities and contribute optimal
+            As a passionate AEM developer with 4+ years of industry experience, my goal is to leverage my abilities and contribute optimal
 solutions to organizations through my skillset and innovative ideas. I am dedicated to continuously enhancing my knowledge and
 staying updated with the latest trends in AEM development to deliver high-quality results
 
           </h5>
           <a href="experience.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Look At Work Experience</a>
+          <p data-aos="fade-up" data-aos-delay="400">
+            <small>Infosys Ltd. (Senior Associate Consultant)</small>
+          </p>
           <p data-aos="fade-up" data-aos-delay="400">
             <small>Deloitte (Consultant)</small>
           </p>
@@ -621,6 +681,21 @@ staying updated with the latest trends in AEM development to deliver high-qualit
             <h2 class="mb-4" data-aos="fade-up">
               <strong>Achievement </strong>
             </h2>
+            <p class="mt-3 mb-4">
+              Here are some of the achievement during work.. 2025 - 2026
+            </p>
+
+            <ul class="list-detail">
+              <li>
+                </span>
+                Own an Insta Award for exemplary performance and significant contributiono to project at Infosys Ltd.
+              </li>
+
+              <li>
+                </span>
+                Received Gracias Award at Infosys (Appreciation)
+              </li>
+            </ul>
             <p class="mt-3 mb-4">
               Here are some of the achievement during work.. 2024 - 2025
             </p>
@@ -697,6 +772,53 @@ staying updated with the latest trends in AEM development to deliver high-qualit
             <h2 class="mb-4" data-aos="fade-up">
               <strong>Job Offers </strong>
             </h2>
+            <p class="mt-3 mb-4">
+              Here are some job offers before joining Infosys Ltd...
+            </p>
+
+            <ul class="list-detail">
+              <li>
+                </span>
+                Got offer from Infosys for Senior Associate Consultant (Technical Lead | AEM developer) and Joined in March 2025.
+              </li>
+              <li>
+                </span>
+                Got offer from Hexaware for Senior Software Engineer (AEM developer).
+              </li>
+              <li>
+              </span>
+                Got offer from HCL Technologies for Senior AEM Developer.
+              </li>
+              <li>
+              </span>
+                Got offer from UST for Senior AEM Developer.
+              </li>
+              <li>
+              </span>
+                Got offer from Photon for AEM Developer.
+              </li>
+              <li>
+                </span>
+                Cleared all interview rounds of Volkswagen for Senior AEM Developer.
+              </li>
+              <li>
+                </span>
+                Cleared 2 interview rounds of Visa for Senior AEM Developer.
+              </li>
+              <li>
+              </span>
+                Cleared all interview rounds of Jet2Travel for AEM Developer.
+              </li>
+              <li>
+              </span>
+                Cleared all interview rounds of Cohesity for Senior AEM Developer.
+              </li>
+              <li>
+              </span>
+                Cleared all interview rounds of Accion Labs for Senior AEM Developer.
+              </li>
+            </ul>   
+
             <p class="mt-3 mb-4">
               Here are some job offers before joining Deloitte...
             </p>
@@ -797,15 +919,15 @@ staying updated with the latest trends in AEM development to deliver high-qualit
           <p class="mb-1">
             <i class="fa fa-home mr-2 footer-icon"></i>
             <a href="contact.html#google-map">
-              No 91 Balaj layout, near global tech mylasandrapark, 
-              RV Vidyaniketan, Bengaluru, Karnataka 560098
+              Hinjawadi Phase II, Hinjawadi Rajiv Gandhi Infotech Park, 
+              Hinjawadi, Pimpri-Chinchwad, Maharashtra 411057
             </a>
           </p>
         </div>
 
         <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" data-aos="fade-up" data-aos-delay="400">
           <p class="copyright-text">
-            Copyright &copy; 2023 VinWorld
+            Copyright &copy; 2025 VinWorld
             <br />
             <a rel="nofollow noopener" href="https://github.com/vinayjawadwar">Work: GITHUB</a>
           </p>
