--- a/project-textutils.html
+++ b/project-textutils.html
@@ -245,8 +245,10 @@ where we used Django (python) as backend and Html, CSS for frontend .</span
 
             <p class="mb-1">
               <i class="fa fa-home mr-2 footer-icon"></i>
-              No 91, Balaj layout, near global tech mylasandrapark, 
-              RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
+              <a href="contact.html#google-map">
+                Hinjawadi Phase II, Hinjawadi Rajiv Gandhi Infotech Park, 
+                Hinjawadi, Pimpri-Chinchwad, Maharashtra 411057
+              </a>
             </p>
           </div>
 
