--- a/project-coronamap.html
+++ b/project-coronamap.html
@@ -246,8 +246,10 @@
 
             <p class="mb-1">
               <i class="fa fa-home mr-2 footer-icon"></i>
-              No 91, Balaj layout, near global tech mylasandrapark, 
-              RV Vidyaniketan, Mailasandra, Bengaluru, Karnataka 560098
+              <a href="contact.html#google-map">
+                Hinjawadi Phase II, Hinjawadi Rajiv Gandhi Infotech Park, 
+                Hinjawadi, Pimpri-Chinchwad, Maharashtra 411057
+              </a>
             </p>
           </div>
 
