--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ staying updated with the latest trends in AEM development to deliver high-qualit
             <ul class="list-detail">
               <li>
                 </span>
-                Own an Insta Award for exemplary performance and significant contributiono to project at Infosys Ltd.
+                Own an Insta Award for exemplary performance and significant contribution to project at Infosys Ltd.
               </li>
 
               <li>
